# VividDown

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.svelte  global.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json  tmphiqxzeu5.tmp-Frag1  tmpw7u6ptn2.tmp-Frag1
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: aria2.rs  auth.rs  cookies.rs  download.rs  ffmpeg.rs  lib.rs  models.rs  settings.rs  ytdlp.rs
src/components/: Header.svelte  InstallModal.svelte  Notification.svelte  Queue.svelte  QueueItem.svelte  Settings.svelte  UrlInput.svelte
