[package]
name = "vivid-down"
version = "0.1.0"
description = "YouTube Downloader with Login Support"
authors = ["you"]
edition = "2021"

[lib]
name = "youtube_downloader_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
regex = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
dirs = "5"
zip = "2"
